        ======= plasma release 0.8.7 (v0_8_7) on Linux (cde-tx32-ldt189) =======

2004-12-22  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug:  We could get a crash if we tried accessing the
	current priority from a global constructor because the current
	processor wasn't set up yet.  I now return the lowest priority in
	such a situation.

2004-12-22  Brian Kahne  <bkahne@ibmoto.com>

	* Created a simple broadcaster template that takes input from a
	channel and writes it to its output channels, clearing them
	first.  Added a convenience class for clocked channels that
	creates a broadcaster with an input clocked channel and an output
	that's non-clocked.  The channels are cleared so that the
	broadcast can be ignored without backing anything up, e.g. if one
	consumer doesn't care, the data is wiped out on the next read.

        ======= plasma release 0.8.6 (v0_8_6) on Linux (cde-tx32-ldt189) =======

2004-12-21  Brian Kahne  <bkahne@ibmoto.com>

	* Added clear methods to the channels.  This will clear out the
	data and any pending writers.

2004-12-14  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug with single-consumer clocked channels:  We weren't
	clearing _readt so on a second pass to an alt where we had to
	sleep, we'd assert.

	* Added clock9 to test clocked channels interacting with
	non-clocked channels in an alt.

        ======= plasma release 0.8.5 (v0_8_5) on Linux (cde-tx32-ldt189) =======

        ======= plasma release 0.8.5 (v0_8_5) on Linux (cde-tx32-ldt189) =======

        ======= plasma release 0.8.5 (v0_8_5) on Linux (cde-tx32-ldt189) =======

2004-12-03  Brian Kahne  <bkahne@ibmoto.com>

	* Added support for multiple consumers to clocked channels.  You
	can create a multi-consumer clocked channel by specifying
	MultiConsumerClockChannel as the second template argument to a
	ClockChan type.  Added clock7 and clock8 to test this.

	* Timeout::ready() now returns true after a timeout as issued.